--- a/hello-world/package.json
+++ b/hello-world/package.json
@@ -9,8 +9,11 @@
         "inspect": "vue-cli-service inspect"
     },
     "dependencies": {
+        "axios": "^0.19.2",
         "core-js": "^3.3.2",
-        "vue": "^2.6.10"
+        "vue": "^2.6.10",
+        "vue-router": "^3.1.6",
+        "vuex": "^3.4.0"
     },
     "devDependencies": {
         "@vue/cli-plugin-babel": "^4.0.0",
