--- a/hello-world/package.json
+++ b/hello-world/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "axios": "^0.19.2",
         "core-js": "^3.3.2",
+        "countup": "^1.8.2",
         "vue": "^2.6.10",
         "vue-router": "^3.1.6",
         "vuex": "^3.4.0"
@@ -24,6 +25,7 @@
         "eslint-plugin-vue": "^5.0.0",
         "less": "^3.10.3",
         "less-loader": "^5.0.0",
+        "mockjs": "^1.1.0",
         "vue-template-compiler": "^2.6.10"
     },
     "eslintConfig": {
